# test

./: .cpp20-config  .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MODERNIZATION.md  Makefile  QUICK_START.md  README.md  SUMMARY.md  VISUAL_STUDIO_CPP20_GUIDE.md  VISUAL_STUDIO_SETUP_SUMMARY.md  beacon.sln  build.sh  build_vs_cpp20.bat
.github/workflows/: build-beacon.yml  build-cmake.yml  code-analysis.yml
beacon/: Agent.cpp  AgentConfig.h  ApiLoader.cpp  beacon.aps  beacon.vcxproj  beacon.vcxproj.filters  utils.cpp
beacon_cpp20/: Agent.cpp  Agent.h  AgentConfig.cpp  ApiDefines.h  ApiLoader.h  CMakeLists.txt  Commander.cpp  ConnectorWS.cpp  ConnectorWS.h  MainAgent.cpp  README.md  beacon_cpp20.vcxproj  beacon_cpp20.vcxproj.filters  config.cpp  main.cpp  ntdll.h  resource.h  utils.h
files/: hashes.py
include/adaptix/beacon/: command_executor.h  task.h
modern_cpp_beacon/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CPP20_FEATURES.md  EXAMPLES.md  README.md  WEBSOCKET.md
modern_cpp_beacon/include/adaptix/beacon/: beacon.h  beacon_config.h  command_executor.h  concepts.h  http_transport.h  transport.h  websocket_transport.h
modern_cpp_beacon/src/: beacon_config.cc  command_executor.cc  http_transport.cc  main_cpp20.cc  main_websocket.cc  websocket_transport.cc
src/: beacon.cc  beacon_config.cc  command_executor.cc  http_transport.cc  main.cc  task.cc
